an update was made to the script for installing kubectl and kubeadm created shell script to install kubernetes dependencies and created k8s cluster startup script
  ```bash
  $ git clone https://github.com/eriktonon/k8s-lab.git
  $ cd k8s-lab
  $ chmod +x startLab.sh
  $ bash startLab.sh
  $ vagrant ssh master
  $ kubeadm token create --print-join-command
  ## copy the return and paste in the nodes
  $ vagrant ssh node1 paste  kubeadm join \ <control-plane-host>:<control-plane-port> \ --token <token> \ --discovery-token-ca-cert-hash sha256:<hash>
  $ vagrant ssh node 2 paste kubeadm join \ <control-plane-host>:<control-plane-port> \ --token <token> \ --discovery-token-ca-cert-hash sha256:<hash>
  ```

--- a/environment.yaml
+++ b/environment.yaml
@@ -13,7 +13,7 @@
   ipaddress: 192.168.99.101
   memory: 2048
   cpus: 2
-  provision: provision/ansible/node2.yaml
+  provision: provision/ansible/nodes.yaml
 
 - name: node2
   box: trombik/ansible-ubuntu-18.04-amd64
@@ -21,4 +21,4 @@
   ipaddress: 192.168.99.102
   memory: 2048
   cpus: 2
-  provision: provision/ansible/node1.yaml
+  provision: provision/ansible/nodes.yaml
