--- a/provision/ansible/nodes.yaml
+++ b/provision/ansible/nodes.yaml
@@ -20,8 +20,11 @@
         state: present
 
     - name: Update apt and install docker-ce
-      apt: update_cache=yes name=docker-ce state=latest
-
+      apt: 
+        name: "docker-ce=5:19.03.0~3-0~ubuntu-bionic"
+        update_cache: "yes" 
+        state: "present"
+        
     - name: set user vagrant
       shell: |
           usermod -aG docker vagrant
